--- a/assets/css/scss/_index.scss
+++ b/assets/css/scss/_index.scss
@@ -1,3 +1,113 @@
 ::-webkit-scrollbar {
     width: 0px;
 }
+
+main {
+    overflow-y: auto;
+    width: 100%;
+    height: 100vh;
+    background-color: #111;
+}
+
+.logo {
+    width: 40%;
+    height: 120px;
+    margin: 70px auto 40px auto;
+    @include img($url: "../images/openlab_logo.jpg", $size: contain);
+
+    @include device(sm){
+        width: 60%;
+        height: 120px;
+        margin: 20px auto;
+    }
+
+    @include device(xs){
+        width: 60%;
+        height: 120px;
+        margin: 20px auto;
+    }
+}
+
+.content-about {
+    max-width: 60%;
+    margin: 0 auto;
+
+    @include device(sm){
+        min-width: 95%;
+    }
+
+    @include device(xs){
+        min-width: 95%;
+    }
+
+    p {
+        @include font($size: 18px);
+        text-align: justify;
+        word-spacing: 2px;
+        letter-spacing: -0.5px;
+
+        @include device(sm){
+            text-align: center;
+            font-size: 16px;
+        }
+
+        @include device(xs){
+            text-align: center;
+            font-size: 16px;
+        }
+
+        &::after {
+            content: "#openlab #appliedresearch #pesquisaaplicada #pesquisa #palestra #evento #tecnologia #technology #ecosystem #empreendedorismo #inovacao";
+            max-width: 60%;
+            display: block;
+            text-align: left;
+            margin-top: 20px;
+            word-spacing: 4px;
+            font-size: 12px;
+            @include device(sm){
+                max-width: 80%;
+                margin-top: 40px;
+            }
+
+            @include device(xs){
+                max-width: 80%;
+                margin-top: 40px;
+            }
+        }
+    }
+}
+
+#marked-link {
+    cursor: pointer;
+    color: #682eb6;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 0px 10px;
+
+    h4 {
+        @include font();
+        @include device(sm){
+            font-size: 14px;
+        }
+
+        @include device(xs){
+            font-size: 14px;
+        }
+    }
+}
+
+.boneco-container {
+    //position: absolute;
+    //left: 50px;
+    //top: 100px;
+    padding: 200px;
+    background-color: red;
+    clip-path: polygon(53% 65%, 52% 68%, 53% 72%, 54% 74%, 54% 77%, 57% 78%, 60% 78%, 65% 77%, 67% 75%, 71% 76%, 75% 78%, 78% 80%, 82% 80%, 84% 83%, 84% 88%, 82% 92%, 83% 96%, 85% 98%, 88% 99%, 92% 97%, 94% 93%, 95% 88%, 92% 87%, 93% 83%, 93% 80%, 93% 76%, 93% 74%, 94% 71%, 94% 68%, 94% 64%, 96% 60%, 97% 56%, 98% 52%, 97% 49%, 94% 47%, 92% 44%, 89% 42%, 86% 42%, 85% 43%, 84% 46%, 85% 49%, 83% 52%, 81% 55%, 82% 58%, 83% 62%, 86% 62%, 85% 65%, 83% 67%, 80% 65%, 79% 63%, 77% 63%, 76% 65%, 77% 67%, 79% 68%, 80% 71%, 77% 72%, 75% 71%, 73% 70%, 71% 69%, 69% 69%, 66% 69%, 64% 69%, 61% 70%, 59% 70%, 57% 68%, 56% 66%, 54% 65%, 53% 65%, 52% 67%, 52% 69%);
+}
