--- a/assets/css/scss/_index.scss
+++ b/assets/css/scss/_index.scss
@@ -6,25 +6,44 @@ main {
     overflow-y: auto;
     width: 100%;
     height: 100vh;
-    background-color: #111;
+    @include img($url: "../images/fundo.png");
+    background-size: contain;
+    background-repeat: repeat;
 }
 
 .logo {
     width: 40%;
-    height: 120px;
-    margin: 70px auto 40px auto;
-    @include img($url: "../images/openlab_logo.jpg", $size: contain);
+    height: 100px;
+    margin: 50px auto 40px auto;
+    @include img($url: "../images/logo.png ");
 
     @include device(sm){
-        width: 60%;
+        width: 80%;
         height: 120px;
         margin: 20px auto;
+        background-size: contain;
     }
 
     @include device(xs){
-        width: 60%;
+        width: 80%;
         height: 120px;
         margin: 20px auto;
+        background-size: contain;
+    }
+}
+
+.shape {
+    width: 374px;
+    height: 425px;
+    shape-outside: url("../images/doll.png");
+    @include img($url: "../images/doll.png", $size: contain);
+    float: right;
+
+    @include device(xs){
+        display: none;
+    }
+    @include device(sm){
+        display: none;
     }
 }
 
@@ -42,9 +61,11 @@ main {
 
     p {
         @include font($size: 18px);
+        color: #111;
         text-align: justify;
         word-spacing: 2px;
         letter-spacing: -0.5px;
+        font-weight: 500;
 
         @include device(sm){
             text-align: center;
@@ -83,16 +104,18 @@ main {
 }
 
 .footer {
-    position: absolute;
+    position: relative;
     bottom: 0px;
     width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
     padding: 0px 10px;
+    margin-top: 20px;
 
     h4 {
         @include font();
+        color: #111;
         @include device(sm){
             font-size: 14px;
         }
@@ -101,13 +124,4 @@ main {
             font-size: 14px;
         }
     }
-}
-
-.boneco-container {
-    //position: absolute;
-    //left: 50px;
-    //top: 100px;
-    padding: 200px;
-    background-color: red;
-    clip-path: polygon(53% 65%, 52% 68%, 53% 72%, 54% 74%, 54% 77%, 57% 78%, 60% 78%, 65% 77%, 67% 75%, 71% 76%, 75% 78%, 78% 80%, 82% 80%, 84% 83%, 84% 88%, 82% 92%, 83% 96%, 85% 98%, 88% 99%, 92% 97%, 94% 93%, 95% 88%, 92% 87%, 93% 83%, 93% 80%, 93% 76%, 93% 74%, 94% 71%, 94% 68%, 94% 64%, 96% 60%, 97% 56%, 98% 52%, 97% 49%, 94% 47%, 92% 44%, 89% 42%, 86% 42%, 85% 43%, 84% 46%, 85% 49%, 83% 52%, 81% 55%, 82% 58%, 83% 62%, 86% 62%, 85% 65%, 83% 67%, 80% 65%, 79% 63%, 77% 63%, 76% 65%, 77% 67%, 79% 68%, 80% 71%, 77% 72%, 75% 71%, 73% 70%, 71% 69%, 69% 69%, 66% 69%, 64% 69%, 61% 70%, 59% 70%, 57% 68%, 56% 66%, 54% 65%, 53% 65%, 52% 67%, 52% 69%);
 }
