--- a/assets/css/scss/_index.scss
+++ b/assets/css/scss/_index.scss
@@ -13,9 +13,9 @@ main {
 
 .logo {
     width: 40%;
-    height: 100px;
-    margin: 50px auto 40px auto;
-    @include img($url: "../images/logo.png ");
+    height: 110px;
+    margin: 40px auto 40px auto;
+    @include img($url: "../images/logo.png", $size: contain);
 
     @include device(sm){
         width: 80%;
@@ -105,13 +105,23 @@ main {
 
 .footer {
     position: relative;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
     padding: 0px 10px;
     margin-top: 20px;
+
+    @include device(sm){
+        position: absolute;
+    }
+    @include device(md){
+        position: absolute;
+    }
+    @include device(xs){
+        position: absolute;
+    }
 
     h4 {
         @include font();
